<resources>
    <string name="app_name">我的智家</string>

    <!--公共-->
    <string name="common_hint_input_phone">请输入手机号码</string>
    <string name="common_hint_input_password">请输入密码</string>
    <string name="common_hine_input_authcode">请输入验证码</string>
    <string name="common_text_finish">完成</string>

    <!--权限获取-->
    <string name="request_permission_location">获取位置信息需要位置权限</string>

    <!--Loading文本-->
    <string name="loading_msg_login">正在登陆..</string>
    <string name="loading_msg_register">正在注册..</string>
    <string name="loading_msg_check_phone">校验中..</string>
    <string name="loading_msg_request_authcode">请求中..</string>
    <string name="loading_msg_request">检查更新...</string>
    <string name="loading_msg_commit">正在提交..</string>

    <!--Toast文本-->
    <string name="toast_msg_phone_is_null">手机号码不能为空</string>
    <string name="toast_msg_password_is_null">密码不能为空</string>
    <string name="toast_msg_password_not_standard">密码长度为6-16位</string>
    <string name="toast_msg_phone_length_error">手机号码长度错误</string>
    <string name="toast_msg_service_error">服务器错误,请稍后重试</string>
    <string name="toast_msg_login_success">登陆成功</string>
    <string name="toast_msg_register_success">注册成功</string>
    <string name="toast_msg_send_authcode_success">验证码已发送，请注意留意短信</string>
    <string name="toast_msg_send_authcode_fail">验证码发送失败</string>
    <string name="toast_msg_authcode_is_null">验证码不能为空</string>
    <string name="toast_msg_authcode_length_error">验证码长度为6位</string>
    <string name="toast_msg_authcode_error">验证码错误</string>
    <string name="toast_msg_password_diff">两次密码不一致</string>
    <string name="toast_msg_user_unregister">该手机号码尚未注册</string>
    <string name="toast_msg_reste_password_successfully">重置密码成功</string>
    <string name="toast_msg_app_exit_hint_msg">再按一次退出程序</string>
    <string name="toast_msg_permission_fail">权限获取失败,无法下载升级文件</string>
    <string name="toast_msg_feedback_title_is_not_null">标题不能为空</string>
    <string name="toast_msg_feedback_content_is_not_null">内容不能为空</string>
    <string name="toast_msg_feedback_commit_success">提交成功</string>

    <string name="man_text_tab_1">首页</string>
    <string name="man_text_tab_2">房间</string>
    <string name="man_text_tab_3">设备管理</string>
    <string name="man_text_tab_4">设置</string>

    
    <string name="login_text_statement">本APP为Julie版权所有</string>
    <string name="login_text_app_desc">2018</string>
    <string name="login_text_register">没有账号?</string>
    <string name="login_text_forget_password">忘记密码</string>
    <string name="login_text_action">登录</string>
    <string name="login_text_title">我的智家</string>

    <string name="register_text_authcode">验证码</string>
    <string name="register_text_gvrp_1">注册即表明同意</string>
    <string name="register_text_gvrp">&#60;&#60;免责条款&#62;&#62;</string>
    <string name="register_text_action">注册</string>

    <string name="reset_password_text_title">忘记密码</string>

    <!--设备管理-->
    <string name="frg_device_manager_title">所有设备</string>

    <!--frg mine-->
    <string name="frg_mine_text_title">我的一家</string>
    <string name="frg_mine_text_setting">设置</string>
    <string name="frg_mine_text_common">通用</string>
    <string name="frg_mine_text_upgrade">版本更新</string>
    <string name="frg_mine_text_new_upgrade">New</string>
    <string name="frg_mine_text_help">帮助反馈</string>
    <string name="frg_mine_text_exit">退出登录</string>

    <string name="frg_mine_text_account">账号:</string>
    <string name="frg_mine_text_system_msg">系统消息</string>
    
    <!--frg_main-->
    <string name="frg_main_text_scene">场景</string>
    <string name="frg_main_text_data">数据</string>
    <string name="frg_main_text_info">信息</string>
    <string name="frg_main_text_unkown_city">未知</string>
    <string name="frg_main_text_weather_fail">加载天气失败</string>
    
    <!--frg_scene-->
    <string name="frg_scene_text_quick">快捷场景</string>

    <!--frg_room-->
    <string name="frg_room_text_tag">请输入房间名称</string>
    <string name="frg_room_text_tag_not_null">房间名称不能为空</string>

    <!--empty_view-->
    <string name="empty_view_null_data">暂无数据</string>

    <!--frg_data-->
    <string name="frg_data_text_electro">家庭用电</string>
    <string name="frg_data_text_environmental_parameter">环境参数</string>
    <string name="frg_data_text_security_alarm">安防报警</string>
    
    <!--frg_info-->
    <string name="frg_info_text_weather">天气情况</string>
    <string name="frg_info_text_notify">物业通知</string>
    <string name="frg_info_text_emergency_num">紧急号码</string>


    <!--帮助和反馈-->
    <string name="help_feedback_text_title">帮助和反馈</string>
    <string name="help_feedback_text_feedback">我有建议</string>
    <string name="help_feedback_text_help">帮助</string>

    <!--反馈-->
    <string name="feedback_text_title">反馈</string>
    <string name="feedback_text_commit">提交</string>
    <string name="feedback_text_hint">请输入你的建议</string>
    <string name="feedback_text_type">请选择反馈类型</string>
    <string name="feedback_text_input_title">请输入标题(不超过15个字)</string>
    <string name="feedback_text_type_feedback">建议</string>
    <string name="feedback_text_type_bug">bug</string>
    <string name="feedback_text_feedback_type">请提交反馈类型</string>

    <!--添加设备-->
    <string name="add_device_text_title">添加只能设备</string>
    <string name="add_device_text_type">请选择设备类型</string>
    <string name="add_device_text_location">请选择设备位置</string>

    <!--设置-->
    <string name="setting_text_upgrade">设备升级</string>
    <string name="setting_text_title">设置</string>

    <!--系统消息-->
    <string name="system_msg_text_title">系统消息</string>

    <!--家庭用电-->
    <string name="household_electricity_text_title">家庭用电</string>
    <string name="household_electricity_today_use">本日用电量</string>
    <string name="household_electricity_all_total">总电费</string>
    <string name="household_electricity_kwh">kw.h</string>
    <string name="household_electricity_money">￥</string>

    <!--环境参数-->
    <string name="envionmental_parameter_text_title">环境参数</string>

    <!--天气信息-->
    <string name="weather_info_text_title">天气信息</string>
    <string name="weather_info_text_current">当前温度</string>
    <string name="weather_info_text_setting">设定温度</string>


</resources>
