<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include"
        layout="@layout/include_layout_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" >

        <LinearLayout
            android:layout_marginTop="@dimen/size_40"
            android:layout_marginLeft="@dimen/size_32"
            android:layout_marginRight="@dimen/size_32"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40"
            android:background="@drawable/shape_common_bg_circle_gray"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/size_20"
                android:layout_height="@dimen/size_20"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/size_5"
                android:src="@mipmap/common_icon_phone" />

            <EditText
                android:id="@+id/register_et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:hint="@string/common_hint_input_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingLeft="@dimen/size_5"
                android:textColor="@color/color_gray_666666"
                android:textColorHint="@color/color_gray_999999"
                android:textSize="@dimen/text_size_14sp" />

        </LinearLayout>

        <RelativeLayout
            android:background="@drawable/shape_common_bg_circle_gray"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginLeft="@dimen/size_32"
            android:layout_marginRight="@dimen/size_32"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40">

            <ImageView
                android:id="@+id/register_iv_1"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/size_16"
                android:layout_height="@dimen/size_16"
                android:layout_marginLeft="@dimen/size_5"
                android:src="@mipmap/common_icon_authcode" />

          <com.vincent.mylibrary.more_language.AppTextView
              android:layout_margin="@dimen/size_0.5"
              android:textColor="@color/color_white_ffffff"
              android:background="@drawable/shape_register_authcode_blue"
              android:id="@+id/register_atv_authcode"
              android:layout_alignParentRight="true"
              android:textSize="@dimen/text_size_16sp"
              android:gravity="center"
              android:text="@string/register_text_authcode"
              android:layout_width="@dimen/size_82"
              android:layout_height="match_parent" />

            <EditText
                android:id="@+id/register_et_authcode"
                android:paddingLeft="@dimen/size_10"
                android:textSize="@dimen/text_size_14sp"
                android:hint="@string/common_hine_input_authcode"
                android:gravity="center_vertical"
                android:background="@null"
                android:maxLength="6"
                android:inputType="number"
                android:layout_toRightOf="@id/register_iv_1"
                android:layout_toLeftOf="@id/register_atv_authcode"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </RelativeLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/size_32"
            android:layout_marginRight="@dimen/size_32"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40"
            android:layout_marginTop="@dimen/size_10"
            android:background="@drawable/shape_common_bg_circle_gray"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/size_20"
                android:layout_height="@dimen/size_20"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/size_5"
                android:src="@mipmap/common_icon_password" />

            <EditText
                android:id="@+id/register_et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:hint="@string/common_hint_input_password"
                android:inputType="textPassword"
                android:maxLength="11"
                android:paddingLeft="@dimen/size_5"
                android:textColor="@color/color_gray_666666"
                android:textColorHint="@color/color_gray_999999"
                android:textSize="@dimen/text_size_14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/size_5"
            android:layout_marginRight="@dimen/size_32"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.vincent.mylibrary.more_language.AppTextView
                android:textSize="@dimen/text_size_12sp"
                android:textColor="@color/color_gray_999999"
                android:text="@string/register_text_gvrp_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.vincent.mylibrary.more_language.AppTextView
                android:id="@+id/register_atv_gvrp"
                android:textColor="@color/color_blue_63d8ff"
                android:text="@string/register_text_gvrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <Button
            android:textColor="@color/color_white_ffffff"
            android:background="@drawable/shape_common_bg_circle_blue_fill"
            android:text="@string/register_text_action"
            android:textSize="@dimen/text_size_16sp"
            android:id="@+id/register_btn_action"
            android:layout_marginLeft="@dimen/size_32"
            android:layout_marginRight="@dimen/size_32"
            android:layout_marginTop="@dimen/size_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>