<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_layout_right_text"/>

    <LinearLayout
        android:layout_marginTop="@dimen/size_40"
        android:layout_marginLeft="@dimen/size_32"
        android:layout_marginRight="@dimen/size_32"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:background="@drawable/shape_common_bg_circle_gray"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/size_20"
            android:layout_height="@dimen/size_20"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/size_5"
            android:src="@mipmap/common_icon_phone" />

        <EditText
            android:id="@+id/check_phone_et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:hint="@string/common_hint_input_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="@dimen/size_5"
            android:textColor="@color/color_gray_666666"
            android:textColorHint="@color/color_gray_999999"
            android:textSize="@dimen/text_size_14sp" />

    </LinearLayout>

    <RelativeLayout
        android:background="@drawable/shape_common_bg_circle_gray"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_32"
        android:layout_marginRight="@dimen/size_32"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40">

        <ImageView
            android:id="@+id/register_iv_1"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/size_16"
            android:layout_height="@dimen/size_16"
            android:layout_marginLeft="@dimen/size_5"
            android:src="@mipmap/common_icon_authcode" />

        <com.vincent.mylibrary.more_language.AppTextView
            android:layout_margin="@dimen/size_0.5"
            android:textColor="@color/color_white_ffffff"
            android:background="@drawable/shape_register_authcode_blue"
            android:id="@+id/check_phone_atv_authcode"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/text_size_16sp"
            android:gravity="center"
            android:text="@string/register_text_authcode"
            android:layout_width="@dimen/size_82"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/check_phone__et_authcode"
            android:paddingLeft="@dimen/size_10"
            android:textSize="@dimen/text_size_14sp"
            android:hint="@string/common_hine_input_authcode"
            android:gravity="center_vertical"
            android:background="@null"
            android:maxLength="6"
            android:inputType="number"
            android:layout_toRightOf="@id/register_iv_1"
            android:layout_toLeftOf="@id/register_atv_authcode"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </RelativeLayout>
    

</LinearLayout>